samples/_failures_safe/1761377743_333f4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5baa64b7.c: In function ‘main’:
./samples/SAFE/__tmp_5baa64b7.c:151:21: error: expected declaration or statement at end of input
  151 |                     printf("Error: Integer overflow during multiplication.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_5baa64b7.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5baa64b7.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5baa64b7.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5baa64b7.c:151:21: error: expected declaration or statement at end of input
